# telegram-media-bot

./: .env  .env.example  .gitignore  1212.sh  CHANGELOG.md  Dockerfile  README.md  cleaner.py  config.py  db.py  deploy_bot.sh  docker-compose.yml  install.sh  locales.py  main.py  pyproject.toml  requirements.txt  update-bot.sh  update-local.sh
.github/workflows/: deploy.yml
docs/: manual.md
handlers/: callback.py  chat_mgmt.py  commands.py  info.py  media.py  message.py  sys_admin.py  utils.py
scripts/: deploy.sh  reinstall.sh
src/: main.py
src/bot/core/: config.py  locales.py  logger.py
src/bot/data/: database.py  repositories.py
src/bot/domain/: forwarding.py  media_service.py
src/bot/handlers/: __init__.py  callback.py  chat_mgmt.py  extras.py  info.py  media.py  message.py  sys_admin.py
src/bot/utils/: check_dlq.py  helpers.py  inspect_db.py
src/cleaner/: __init__.py  engine.py
tests/: test_cleaner.py
