[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-media-bot"
version = "3.1.0"
description = "A high-performance, asynchronous Telegram media management bot."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jaik", email = "jaik@example.com" }
]
dependencies = [
    "python-telegram-bot[job-queue]==22.5",
    "aiosqlite==0.21.0",
    "cachetools==6.2.2",
    "colorama==0.4.6",
    "python-dotenv==1.2.1",
    "APScheduler==3.11.2",
    "aiolimiter==1.2.1",
    "httpx==0.28.1",
    "pytz==2025.2",
    "tzlocal==5.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
